[tool.poetry]
name = "sentry-opensearch-nodestore"
version = "0.1.0"
description = "An asynchronous Sentry NodeStorage backend for OpenSearch."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/sentry-opensearch-nodestore" # Optional: Add your repo URL
keywords = ["sentry", "opensearch", "nodestore", "asyncio"]

[tool.poetry.dependencies]
python = "^3.8"
opensearch-py = { version = ">=2.0.0", extras = ["async"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
